--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url('../../media/screen.png');
+	background-image: url("https://unsplash.com/photos/yKRdX-kY8TE");
 	height: 100%;
 	background-size: cover;
 }
