--- a/jamii/templates/base.html
+++ b/jamii/templates/base.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body>
+<body style="background-image: url(https://images.unsplash.com/photo-1510248454181-84cfb32b48b2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60); background-size: cover" >
     {% include 'navbar.html'%}
     {% block content %} {%endblock%}
 
