--- a/jamii/templates/navbar.html
+++ b/jamii/templates/navbar.html
@@ -10,8 +10,12 @@
                 <a class="nav-link" href="{% url 'profile' user %}">PROFILE</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT</a>
+                <a class="nav-link" href="{% url 'new_business'%}">BUSINESS</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'post'%}">POSTS</a>
+            </li>
+
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
                     <span class="caret"></span>
